<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_customer"
            android:icon="@drawable/ic_cadastro"
            android:title="@string/tv_045" />
        <item
            android:id="@+id/nav_history_customer"
            android:icon="@drawable/ic_history"
            android:title="@string/tv_043" />
        <!--<item-->
        <!--android:id="@+id/nav_slideshow"-->
        <!--android:icon="@drawable/ic_menu_slideshow"-->
        <!--android:title="Slideshow" />-->
        <item
            android:id="@+id/nav_manage_customer"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />

    </group>

    <item android:title="@string/tv_040">
        <menu>
            <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="Share" />-->
            <item
                android:id="@+id/nav_logout_customer"
                android:icon="@drawable/ic_exit"
                android:title="@string/tv_038" />
        </menu>
    </item>

</menu>
