<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_003"
            android:inputType="textEmailAddress"
            android:textColor="@color/metColorPrimary"
            android:textColorHint="@color/metColorPrimary"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/metColorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/metColorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_004"
            android:inputType="textPassword"
            android:textColor="@color/metColorPrimary"
            android:textColorHint="@color/metColorPrimary"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/metColorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/metColorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_005"
            android:inputType="textPassword"
            android:textColor="@color/metColorPrimary"
            android:textColorHint="@color/metColorPrimary"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/metColorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/metColorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_021"
            android:inputType="textCapWords"
            android:textColor="@color/metColorPrimary"
            android:textColorHint="@color/metColorPrimary"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/metColorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/metColorPrimary"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_007"
            android:inputType="phone"
            android:textColor="@color/metColorPrimary"
            android:textColorHint="@color/metColorPrimary"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/metColorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/metColorPrimary"/>

    </LinearLayout>

</android.support.v7.widget.CardView>